Needs List::Util >= 1.33.

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,7 @@ repository.github = user:perlmol
 [Prereqs]
 Chemistry::Mol = 0.35
 JSON = 0
+List::Util = 1.33
 URL::Encode = 0
 
 [Prereqs / Test]
